tests/error/enum_literal_type_match2.bz
// error: couldn't match the function call to the function
// note: function argument types are '<error-type>'
// note: candidate: 'function foo(: move auto) -> void'
function foo(: move auto);

function test()
{
	foo(.a);
}
